New HTML: ignore <emphasis> in titles
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3408 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static-daps/css/style.css
+++ b/xslt_suse2/static-daps/css/style.css
@@ -1398,6 +1398,10 @@ a.leads-to-page:active .name, .refentrytitle a:hover, .refentrytitle a:focus,
     color: #666;
 }
 
+.title em, .subtitle em {
+    font-style: normal;
+}
+
 .page-bottom a:hover .number, .page-bottom a:focus .number,
 .page-bottom a:active .number {
     color: #729FCF;
