--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -1399,6 +1399,10 @@ a.leads-to-page:active .name, .refentrytitle a:hover, .refentrytitle a:focus,
     color: #666;
 }
 
+.title em, .subtitle em {
+    font-style: normal;
+}
+
 .page-bottom a:hover .number, .page-bottom a:focus .number,
 .page-bottom a:active .number {
     color: #68C05E;
