New HTML: improve line height of product information above headlines
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3409 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static-daps/css/style.css
+++ b/xslt_suse2/static-daps/css/style.css
@@ -1253,6 +1253,7 @@ h6.version-info {
     color: #FFF;
     background-color: #729FCF;
     float: left;
+    line-height: 100%;
 }
 
 .book h6.version-info + div h1.title, .article h6.version-info + div h1.title,
