--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -1254,6 +1254,7 @@ h6.version-info {
     color: #FFF;
     background-color: #76AD2D;
     float: left;
+    line-height: 100%;
 }
 
 .book h6.version-info + div h1.title, .article h6.version-info + div h1.title,
