New HTML: turns out you can use screens inside figures, in which case the screen text would be centred
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3430 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -1748,6 +1748,7 @@ code {
     display: block;  
     overflow: auto;
     background-color: #EFEFF0;
+    text-align: left;
 }
 
 .screen code, .screen .command {
