--- a/xslt_suse2/static-daps/css/style.css
+++ b/xslt_suse2/static-daps/css/style.css
@@ -1747,6 +1747,7 @@ code {
     display: block;  
     overflow: auto;
     background-color: #EFEFF0;
+    text-align: left;
 }
 
 .screen code, .screen .command {
