New HTML: fixes for literal & other monospace items
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3647 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -1708,7 +1708,7 @@ p a:visited {
     color: #5C3566;
 }
 
-code, .command, .keycap {
+code, .command, .keycap, .replaceable {
     font-family: 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace;
     font-weight: normal;
     padding: 0 4px;
@@ -1719,8 +1719,12 @@ code, .command, .keycap {
     line-height: 120%;
 }
 
+code, .command, .keycap {
+    font-style: normal;
+}
 
-code code, code .command, .command code {
+code code, code .command, .command code, code .replaceable,
+.command .replaceable, .replaceable code, .replaceable .command {
     padding: 0;
     border: none;
 }
@@ -1765,7 +1769,7 @@ code {
     text-align: left;
 }
 
-.screen code, .screen .command {
+.screen code, .screen .command, .screen .replaceable {
     border-radius: 0;
     background-color: transparent;
     font-size: 100%;
