New HTML: tables in examples looked had toom uch space around them
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3656 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -2099,6 +2099,19 @@ ol.substeps {
     margin: 10px 0 24px 0;
 }
 
+.informaltable {
+    margin: 10px 0 24px 0;
+}
+
+.example-contents > .informaltable {
+    margin: 0px 0 0 0;
+    padding: 0;
+}
+
+.example-contents > .informaltable > table {
+    margin: 10px 0 0 0;
+    padding: 0;
+}
 
 .table table, .informaltable table {
     border: 1px solid #999;
