New HTML: revert some fallout from the changes to make ActiveDoc diffing simpler
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3661 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -441,6 +441,10 @@ html, body {
     background-color: #76AD2D;
 }
 
+.bubble-closer, .back-button {
+    display: none;
+}
+
 
 /* Toolbar */
 
@@ -1905,8 +1909,6 @@ div.figure .mediaobject {
     max-width: -webkit-calc(100% - 2px);
     display: block; /* inline images weirdly have some whitespace below them, thus block'ing */
 }
-
-
 
 .figure-title {
     padding: 10px;
