New HTML: Fix problem with IDs in Q&A sets
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3665 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -2018,6 +2018,14 @@ a:hover code, a:focus code, a:active code {
     z-index: 0;
 }
 
+.free-id {
+    position: relative;
+    top: -33px;
+    left: -1px;
+    width: 0.01px;
+    height: 0.01px;
+}
+
 .procedure-title code, .procedure-title .command, .procedure-title .keycap,
 .table-title code, .table-title .command, .table-title .keycap,
 .example-title code, .example-title .command, .example-title .keycap,
@@ -2229,7 +2237,7 @@ div.itemizedlist {
     background-repeat: no-repeat;
 }
 
-.js-on .question.hover:before, .js-on .question.focus:before {
+.js-on .question:hover:before, .js-on .question:focus:before {
     background-position: -8px 0;
 }
 
