--- a/xslt_suse2/static-daps/css/style.css
+++ b/xslt_suse2/static-daps/css/style.css
@@ -1,15 +1,4 @@
-/*
-Use fonts from Google (for now): http://www.google.com/webfonts#UsePlace:use/Collection:Open+Sans
-For additional support for Vietnamese, add "vietnamese," after "&subset=".
-Additional available weights are Book ("300,300italic"), Semi-bold ("500, 500italic"), and Extra-bold ("800,800italic").
-Consider page load time.
-Ideally, we could append &text=... and add a few common Greek characters, like
-alpha, beta, ... but that doesn't work together with the subset option.
-*/
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic&subset=latin-ext,cyrillic);
-
-/* Reset everything */
-/* From http://meyerweb.com/eric/tools/css/reset/, v2.0, modified */
+/* Reset, from http://meyerweb.com/eric/tools/css/reset/, v2.0, modified */
 html, body, div, span, iframe, h1, h2, h3, h4, h5, h6, p, pre,
 a, abbr, acronym, big, code, em, img, ins, kbd, q, s, small, strike, strong,
 sub, sup, tt, var, b, u, i, dl, dt, dd, ol, ul, .footer ul, li,
