New HTML: add Adam's bug filing script to draft mode HTML
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3766 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -2297,6 +2297,24 @@ p.ds-message {
     font-size: 22px;
 }
 
+.file-bug {
+    color: #333;
+    font-size: 10px;
+    height: 14px;
+    line-height: 14px;
+    overflow: hidden;
+    padding: 0 3px;
+    border: 1px solid #AAA;
+    background-color: #EEE;
+    text-transform: uppercase;
+    display: inline-block;
+}
+
+.file-bug:hover, .file-bug:focus, .file-bug:active {
+    border-color: #AAA;
+    background-color: #DDD;
+}
+
 body.draft {
     background: url(../images/draft.png) no-repeat fixed left 50%;
 }
