New CSS: don't hyphenate phrases, make permalinks & report-bug links a little more visible by default
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3779 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -1412,7 +1412,7 @@ a.leads-to-page:active .name, .refentrytitle a:hover, .refentrytitle a:focus,
 }
 
 .permalink, .report-bug {
-    opacity: 0;
+    opacity: 0.3;
     font-weight: normal;
     text-decoration: none;
     transition: opacity 0.2s ease-in-out 0.1s;
@@ -1614,7 +1614,7 @@ p, td {
     hyphens: auto;
 }
 
-.ulink, .email {
+.ulink, .email, .phrase {
     -moz-hyphens: none;
     hyphens: none;
 }
