New CSS: forbid overflow-y in screens
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3787 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -1781,6 +1781,7 @@ code {
     line-height: 125%;
     display: block;
     overflow: auto;
+    overflow-y: hidden;
     background-color: #EFEFF0;
     text-align: left;
 }
