--- a/xslt_suse2/static-daps/css/style.css
+++ b/xslt_suse2/static-daps/css/style.css
@@ -1780,6 +1780,7 @@ code {
     line-height: 125%;
     display: block;
     overflow: auto;
+    overflow-y: hidden;
     background-color: #EFEFF0;
     text-align: left;
 }
