New HTML: Add ulink URLs to print view
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3816 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static-daps/css/style.css
+++ b/xslt_suse2/static-daps/css/style.css
@@ -1219,6 +1219,10 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     height: 10px;
 }
 
+.ulink-url {
+    display: none;
+}
+
 #_content .screen a[id] {
     display: none;
 }
@@ -2327,7 +2331,12 @@ body.draft {
 
 
 @media print {
-    #_fixed-header-wrap, #_toolbar-wrap, #_pickers, #_inward, #_footer-wrap, #_bottom-navigation, #_share-print {
+    #_fixed-header-wrap, #_toolbar-wrap, #_pickers, #_inward, #_footer-wrap,
+    #_bottom-navigation, #_share-print {
+        display: none;
+    }
+
+    .permalink, .report-bug {
         display: none;
     }
 
@@ -2351,6 +2360,10 @@ body.draft {
         background-image: none;
         width: auto;
         height: auto;
+    }
+
+    .ulink-url {
+        display: inline;
     }
 }
 
