--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -1220,6 +1220,10 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     height: 10px;
 }
 
+.ulink-url {
+    display: none;
+}
+
 #_content .screen a[id] {
     display: none;
 }
@@ -2328,7 +2332,12 @@ body.draft {
 
 
 @media print {
-    #_fixed-header-wrap, #_toolbar-wrap, #_pickers, #_inward, #_footer-wrap, #_bottom-navigation, #_share-print {
+    #_fixed-header-wrap, #_toolbar-wrap, #_pickers, #_inward, #_footer-wrap,
+    #_bottom-navigation, #_share-print {
+        display: none;
+    }
+
+    .permalink, .report-bug {
         display: none;
     }
 
@@ -2352,6 +2361,10 @@ body.draft {
         background-image: none;
         width: auto;
         height: auto;
+    }
+
+    .ulink-url {
+        display: inline;
     }
 }
 
