Create valid XHTML in Q&As: dt does not allow p elements inside it
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3844 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -2218,11 +2218,11 @@ div.itemizedlist {
     margin: 0 0 24px;
 }
 
-.question p, .question code, .question .literal {
+.question, .question code, .question .literal {
     color: #666;
 }
 
-.question p {
+.question {
     font-style: italic;
 }
 
@@ -2230,7 +2230,7 @@ div.itemizedlist {
     cursor: pointer;
 }
 
-.js-on .question:hover p, .js-on .question:focus p, .js-on .active .question p {
+.js-on .question:hover, .js-on .question:focus, .js-on .active .question {
     color: #000;
 }
 
@@ -2244,7 +2244,7 @@ div.itemizedlist {
     position: relative;
 }
 
-.question p + p {
+.question br {
     margin-top: 2px;
 }
 
@@ -2254,11 +2254,10 @@ div.itemizedlist {
 
 .js-on .question:before {
     content: '';
-    display: block;
+    display: inline-block;
     margin: 4px 0 0;
     width: 17px;
     height: 15px;
-    float: left;
     background-image: url(../images/arrow.png);
     background-position: -98px 0;
     background-repeat: no-repeat;
